--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 # Основные зависимости Flask
 Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
 Werkzeug==2.3.7
 
 # Для работы с переменными окружения
@@ -44,8 +43,8 @@ Flask-CORS==4.0.0
 # Для работы с сессиями
 Flask-Session==0.5.0
 
-# Для работы с миграциями базы данных
-Flask-Migrate==4.0.5
+# Для работы с миграциями базы данных (не нужно для Supabase)
+# Flask-Migrate==4.0.5
 
 # Для работы с формами
 Flask-WTF==1.1.1
