--- a/requirements.txt
+++ b/requirements.txt
@@ -56,3 +56,6 @@ structlog==23.1.0
 # Для работы с конфигурацией
 pydantic==2.3.0
 pydantic-settings==2.0.2
+
+# Для работы с OpenAI API
+openai==1.3.7
