--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,21 @@ services:
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
-    startCommand: python setup_render.py && gunicorn -k gthread -w 1 --threads 8 --timeout 300 --graceful-timeout 180 --keep-alive 5 app:app --bind 0.0.0.0:$PORT
+      # Install Chrome and ChromeDriver during build phase
+      apt-get update
+      apt-get install -y wget gnupg unzip curl
+      wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add -
+      echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list
+      apt-get update
+      apt-get install -y google-chrome-stable
+      # Install ChromeDriver
+      CHROME_VERSION=$(google-chrome --version | awk '{print $3}' | cut -d'.' -f1-3)
+      CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION}")
+      wget -O /tmp/chromedriver.zip "https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip"
+      unzip /tmp/chromedriver.zip -d /tmp/
+      mv /tmp/chromedriver /usr/local/bin/
+      chmod +x /usr/local/bin/chromedriver
+    startCommand: gunicorn -k gthread -w 1 --threads 8 --timeout 300 --graceful-timeout 180 --keep-alive 5 app:app --bind 0.0.0.0:$PORT
     envVars:
       - key: FLASK_ENV
         value: production
